{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 312,
  "lineage": "cdcde7aa-998a-21a6-4f07-bc5358bbd029",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0adee97c792e6296e",
            "public_dns": "ec2-107-21-192-139.compute-1.amazonaws.com",
            "public_ip": "107.21.192.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05f881751a12822f0",
            "public_dns": "ec2-184-73-45-124.compute-1.amazonaws.com",
            "public_ip": "184.73.45.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_instance",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:internet-gateway/igw-04653459aefcc440b",
            "id": "igw-04653459aefcc440b",
            "owner_id": "034519235875",
            "tags": {
              "Name": "ig"
            },
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adee97c792e6296e",
            "id": "nat-0214e62cf270074b4",
            "network_interface_id": "eni-073219358b5e8a4c5",
            "private_ip": "10.0.0.100",
            "public_ip": "107.21.192.139",
            "subnet_id": "subnet-093605436e5b2b3a7",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03f1c6146ac0592db",
            "owner_id": "034519235875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04653459aefcc440b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bac1ea0ac9be511f",
            "owner_id": "034519235875",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0214e62cf270074b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table2"
            },
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt_to_prv_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcf3bba43f7ac0dc",
            "route_table_id": "rtb-0bac1ea0ac9be511f",
            "subnet_id": "subnet-09f74ea8dbc3980bb"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table2",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt_to_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f98274a156d0c8c",
            "route_table_id": "rtb-03f1c6146ac0592db",
            "subnet_id": "subnet-093605436e5b2b3a7"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:security-group/sg-0ef3ebb3c8f3faabc",
            "description": "Allow SSH and Apache2 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef3ebb3c8f3faabc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c17fa98a53c7db7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c17fa98a53c7db7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": null,
            "owner_id": "034519235875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:security-group/sg-03c17fa98a53c7db7",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c17fa98a53c7db7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": null,
            "owner_id": "034519235875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:subnet/subnet-09f74ea8dbc3980bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09f74ea8dbc3980bb",
            "map_public_ip_on_launch": false,
            "owner_id": "034519235875",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:subnet/subnet-093605436e5b2b3a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-093605436e5b2b3a7",
            "map_public_ip_on_launch": false,
            "owner_id": "034519235875",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-06aac24cdd62e8f60"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034519235875:vpc/vpc-06aac24cdd62e8f60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a7351ba26d374b9",
            "default_route_table_id": "rtb-0d4aff1316f9387e4",
            "default_security_group_id": "sg-019f60ff3eebb3d71",
            "dhcp_options_id": "dopt-025618b4f633dd296",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06aac24cdd62e8f60",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d4aff1316f9387e4",
            "owner_id": "034519235875",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}